--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,20 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaryColor">#43a047</color>
+
+    <color name="primaryLightColor">#76d275</color>
+
+    <color name="primaryDarkColor">#00701a</color>
+
+    <color name="secondaryColor">#b2ebf2</color>
+
+    <color name="secondaryLightColor">#e5ffff</color>
+
+    <color name="secondaryDarkColor">#81b9bf</color>
+
+    <color name="primaryTextColor">#000000</color>
+
+    <color name="secondaryTextColor">#000000</color>
+
 </resources>
