finished it all and it mostly works

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,11 @@
 
     <TextView
         android:id="@+id/textView"
+        style="@style/CardView.Light"
         android:layout_width="@dimen/textViewWidth"
         android:layout_height="@dimen/textViewHeight"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="40dp"
         android:text="Click the button to win big!!!"
         android:textColor="@color/secondPrimaryColor"
         android:textSize="@dimen/textViewFontSize"
@@ -20,27 +21,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/editTextFood"
+        style="@style/CardView.Light"
         android:layout_width="@dimen/editTextWidth"
         android:layout_height="@dimen/editTextHeight"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="40dp"
         android:layout_marginBottom="400dp"
         android:ems="10"
-        android:hint="Enter your favorite food"
+        android:hint="Enter your favorite food here"
         android:inputType="textPersonName"
         android:textSize="@dimen/editTextFontSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/editTextNumber"
         android:layout_width="@dimen/editTextWidth"
         android:layout_height="@dimen/editTextHeight"
         android:layout_marginStart="40dp"
         android:layout_marginBottom="300dp"
         android:ems="10"
-        android:hint="Enter your favorite number"
-        android:inputType="textPersonName"
+        android:hint="Enter your favorite number here"
+        android:inputType="numberDecimal"
         android:textSize="@dimen/editTextFontSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -51,6 +53,7 @@
         android:layout_height="@dimen/buttonHeight"
         android:layout_marginStart="125dp"
         android:layout_marginBottom="150dp"
+        android:onClick="onButton"
         android:text="Click me"
         android:textColor="@color/secondPrimaryColor"
         android:textSize="@dimen/buttonFontSize"
@@ -58,11 +61,14 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="509dp" />
+        android:id="@+id/finalText"
+        android:layout_width="@dimen/textViewWidth"
+        android:layout_height="@dimen/textViewHeight"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="50dp"
+        android:textColor="@color/primaryDarkColor"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
