--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/secondaryColor"
+    android:color="@color/primaryColor"
     tools:context=".MainActivity" >
 
     <TextView
         android:id="@+id/textView"
-        style="@style/CardView.Light"
+        style="@style/CardView.Dark"
         android:layout_width="@dimen/textViewWidth"
         android:layout_height="@dimen/textViewHeight"
         android:layout_marginStart="@dimen/sideMargin"
@@ -24,8 +25,8 @@
 
     <EditText
         android:id="@+id/editTextFood"
-        style="@style/CardView.Light"
         android:layout_width="@dimen/editTextWidth"
+
         android:layout_height="@dimen/editTextHeight"
         android:layout_marginStart="@dimen/sideMargin"
         android:layout_marginBottom="50dp"
@@ -44,6 +45,7 @@
         android:layout_marginStart="@dimen/sideMargin"
         android:layout_marginBottom="75dp"
         android:ems="10"
+
         android:gravity="center"
         android:hint="Enter your favorite number here"
         android:inputType="numberDecimal"
